ch02/network-policy/backend-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-ingress
  namespace: g04
spec:
  podSelector:
    matchLabels:
      tier: backend # applies to pods matching this label.
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: orion # applies to namespeaces matching this label.
      podSelector:
        matchLabels:
          tier: frontend # applies to pods matching this label.
    ports:
    - protocol: TCP
      port: 3000 # allow traffic on this port.
